crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_tool_running_partial_output.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                                                                   # [-]=                                                                                
│   │ Activity                                                                      # [-]=   [fg=#f1fc79]=│  [fg=#f1fc79 b]=Activity [-]=                                                                   [-]=  
│   │ · run_shell [running]  $ cargo test                                           # [-]=   [fg=#f1fc79]=│  [fg=#f7c67f]=·  [fg=#ebfafa b]=run_shell [fg=#f7c67f]= [running] [-]=   [fg=#abb4da]=$ cargo test [-]=                                        [-]=  
│   │    │ running 5 tests                                                          # [-]=   [fg=#f1fc79]=│  [fg=#3b4261]=   │  [fg=#8fa1b3]=running [fg=#c0c5ce]= 5 tests [-]=                                                       [-]=  
│   │    │ test tests::foo ... ok                                                   # [-]=   [fg=#f1fc79]=│  [fg=#3b4261]=   │  [fg=#8fa1b3]=test [fg=#c0c5ce]= tests::foo ... ok [-]=                                                [-]=  
│   │    │ test tests::bar ... ok                                                   # [-]=   [fg=#f1fc79]=│  [fg=#3b4261]=   │  [fg=#8fa1b3]=test [fg=#c0c5ce]= tests::bar ... ok [-]=                                                [-]=  
│   │    │ test tests::baz ... ok                                                   # [-]=   [fg=#f1fc79]=│  [fg=#3b4261]=   │  [fg=#8fa1b3]=test [fg=#c0c5ce]= tests::baz ... ok [-]=                                                [-]=  
│   │    │ test tests::qux ... ok                                                   # [-]=   [fg=#f1fc79]=│  [fg=#3b4261]=   │  [fg=#8fa1b3]=test [fg=#c0c5ce]= tests::qux ... ok [-]=                                                [-]=
