crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_tool_search_results.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                                                                   # [-]=                                                                                
│   │ ✓ [DONE] search_text  pattern: fn main  5 lines · Ctrl+O details              # [-]=   [fg=#f1fc79]=│  [fg=#37f499]=✓ [DONE]  [fg=#ebfafa b]=search_text [-]=   [fg=#abb4da]=pattern: fn main [fg=#abb4da]=  5 lines · Ctrl+O details [-]=           [-]=
