crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_tool_truncated_output.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                                                                   # [-]=                                                                                
│   │ ✓ [DONE] run_shell  $ ls  20 lines · Ctrl+O details                           # [-]=   [fg=#f1fc79]=│  [fg=#37f499]=✓ [DONE]  [fg=#ebfafa b]=run_shell [-]=   [fg=#abb4da]=$ ls [fg=#abb4da]=  20 lines · Ctrl+O details [-]=                        [-]=
