crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_user_message_narrow.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                           # [-]=                                        
│     User                                  # [-]=   [fg=#04d1f9 b]=   [fg=#04d1f9 b]=User [-]=                               [-]=  
│     Hello, can you help me with this?     # [-]=   [fg=#04d1f9 b]=   [fg=#ebfafa]=Hello, can you help me with this? [-]=  [-]=
